# marbles

./: .env.example  .eslintrc.cjs  .eslintrc.js  .gitignore  AGENTS.md  BUGFIXES.md  CI_BUILD_REFACTOR.md  CLAUDE.md  COMMANDS.md  LIGHTING_SYSTEM_GUIDE.md  MARBLE_VALIDATION_SUMMARY.md  PARTICLE_INTEGRATION_GUIDE.md  README.md  SWARM_DEPLOYMENT_REPORT.md  TROUBLESHOOTING.md  ai-cli.sh  app_storage_manager.py.backup  cockpit.code-workspace  deploy.py  dev.sh  diagnose_blank.cjs  fetch-secrets.sh  grok.md  index.html  marble_extreme_shaders.ts  marble_extreme_shadow_ninja_volcanic_magma.json  marble_materials.filamat  marble_track_level5_extreme.json  marble_track_level5_extreme_lighting.json  marble_validation_report.json  models.json  package-lock.json  package.json  plan.md  repos.json  setup.sh  swarm-spec-breath-shader.yaml  switch.sh  test_bomb.cjs  test_game.js  (+15 more)
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit
.github/: copilot-instructions.md
.playwright-mcp/: page-2026-04-12T01-45-24-343Z.yml  page-2026-04-12T01-46-58-667Z.yml  page-2026-04-12T01-47-27-844Z.yml  page-2026-05-15T12-22-49-874Z.yml  page-2026-05-15T12-25-26-594Z.yml  page-2026-05-15T12-27-13-874Z.yml  page-2026-05-15T12-27-49-840Z.yml  page-2026-05-15T12-28-01-400Z.yml
ai-workflows/: README.md
assets/: README.md  manifest.json
backend/: README.md  requirements.txt
docs/: AGENTS.md  CONTRIBUTING.md  CURRENT_STATE.md  GAME_ANALYSIS.md  HUD_CONSOLIDATION_SUMMARY.md  MARBLE_RENDERING_GUIDE.md  PERFORMANCE_BASELINE.md  PROJECT_STRUCTURE.md  RENDERER_FALLBACK.md  RENDERING_ENHANCEMENTS.md  WEBGPU_EVALUATION.md  WEBGPU_PARTICLES.md  mobile-pwa.md  multiplayer.md  test_plan.md
public/: baked_color.filmat  baked_procedural.filament  custom_material.mat  custom_material_enhanced.mat  custom_material_procedural.mat  filament.js  filament.wasm  galactic_core.mat  manifest.webmanifest  neon_glow.mat  shadow_ninja.mat  sw.js  volcanic_magma.mat
scripts/: benchmark-wasm-bridge.mjs  generate-env-cubemaps.js  generate-level-inventory.cjs  generate-showcase-track.cjs  run-unit-tests.mjs  split-game-loop-render.mjs  stress-relay.mjs  sync-zone-handlers.cjs  validate-assets.cjs  verify_syntax.js
server/: relay.mjs
shared/: AGENTS_TEMPLATE.md
src/: ability-methods.js  antigravity_zone.js  audio.js  auto-quality-governor.js  bumper_arena.js  canyon_run.js  clockwork_zone.js  cube-geometry.js  culling-manager.js  decorative-primitives.js  effect-pool.js  game-logic-methods.js  game-loop-methods.js  game-loop-render-methods.js  game-loop-sync-methods.js  ghost_marble_draft.js  gpu-instancing.js  grapple_course_zone.js  helix_zone.js  hud-manager.js  ice_cave_zone.js  init-methods.js  input-methods.js  level-effect-budget.js  levels.js  lighting-budget.js  lighting-system.js  main.js  marble-lod.js  marble-management-methods.js  marble-material-tier.js  marble_draft.js  marbles_data.js  material-presets.js  material-system.js  math.js  math.ts  mushroom_bounce_zone.js  particle-materials.js  particle-sync-helpers.js  (+23 more)
storage/: io.py  main.py
swarm-outputs/: MERGE_SUMMARY.md  phase-a-complete.md  phase-a-qa-report.md  randomization-report.md
tests/: test.js  test_ability_registry.js  test_asset_pipeline.js  test_audio_pipeline.js  test_auto_quality_governor.js  test_campaign_chapters.js  test_campaign_merge.js  test_campaign_progress.js  (+33 more)
wasm/: CMakeLists.txt  README.md  build.sh  marble_physics.cpp
wasm_renderer/: CMakeLists.txt  build.sh
(+503 files in other folders)
